Fixed issues with zoom animation on smaller screen sizes. Updated projects links, and copy

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <h2 id="tagline">
                         web developer
                     </h2>
-                    <p id="tagline-copy">
+                    <!-- <p id="tagline-copy">
                         Lorem ipsum dolor
-                    </p>
+                    </p> -->
                     <div id="button-container">
                         <a href="./assets/files/Ada-Hoeg-Resume.pdf" target="_blank" rel="noopener noreferrer" class="btn-one">view resume.
                         </a>
@@ -69,7 +69,7 @@
             <section id="skills">
                 <h3>skills.</h3>
                 <p class="p-copy">
-                    Hello there - nice to meet you! My name is Ada, and I'm a software developer and QA engineer based out of
+                    Hello there - nice to meet you! My name is Ada, and I'm a web developer and QA engineer based out of
                     Toronto, Canada!
                 </p>
                 <div class="tech-container">
@@ -81,52 +81,56 @@
                     <i class="devicon-jquery-plain-wordmark colored"></i>
                     <i class="devicon-react-original-wordmark colored"></i>
                     <i class="devicon-mysql-plain-wordmark colored"></i>
+                    <i class="devicon-jest-plain"></i>
                 </div>
             </section>
             <!-- work -->
             <section id="work">
-                <h3>work.</h3>       
+                <h3>work.</h3>
+                <!-- project 1 -->
                 <div class="projects">
                     <h4>Clean React portfolio</h4>
                     <div>
                         <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
-                            facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
-                            vel laborum
-                            numquam.
+                        An easy-to-edit portfolio template with a clean design, and light/dark mode capability. Content is dynamically generated, and can be easily edited from the config.js file.
                         </p>
                     </div>
-                    <button class="btn-one">live</button>
-                    <button class="btn-two">code</button>
+                    <a href="http://clean-react-portfolio.vercel.app/" target="_blank" rel="noopener noreferrer"
+                    class="btn-one">live site.
+                    </a>
+                    <a href="https://github.com/flovelace/clean-react-portfolio" target="_blank" rel="noopener noreferrer"
+                    class="btn-two">view code.
+                    </a>
                 </div>
+                <!-- project 2 -->
+                <div class="projects">
+                    <h4>My Little Pokédex</h4>
+                    <div>
+                        <p class="p-copy">
+                            Using the Pokémon API, this project was created as a personal challenge to use an accessible dark colour palette, and vanilla JavaScript.
+                        </p>
+                    </div>
+                    <a href="https://flovelace.github.io/my-little-pokedex/" target="_blank" rel="noopener noreferrer"
+                        class="btn-one">live site.
+                    </a>
+                    <a href="https://github.com/flovelace/my-little-pokedex" target="_blank" rel="noopener noreferrer"
+                        class="btn-two">view code.
+                    </a>
+                </div>
+                <!-- project 3 -->
                 <div class="projects">
                     <h4>Delve Into the Dungeon</h4>
                     <div>
                         <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
-                            facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
-                            vel laborum
-                            numquam.
+                            This is a clean design page with a dark mode theme with a focus on helping people find interesting music within the dungeon synth genre. It was created as a personal challenge  to use pure HTML5 and CSS3 to create a responsive and accessible page.
                         </p>
                     </div>
-                    <button class="btn-one">live</button>
-                    <button class="btn-two">code</button>
-                </div>
-                <div class="projects">
-                    <h4>My Little Pokedex</h4>
-                    <div>
-                        <p class="p-copy">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia possimus reprehenderit odit optio
-                            facere, rerum
-                            repellendus natus distinctio mollitia quos asperiores expedita commodi delectus voluptatibus quia in
-                            vel laborum
-                            numquam.
-                        </p>
-                    </div>
-                    <button class="btn-one">live</button>
-                    <button class="btn-two">code</button>
+                    <a href="https://flovelace.github.io/delve-into-the-dungeon/" target="_blank" rel="noopener noreferrer"
+                        class="btn-one">live site.
+                    </a>
+                    <a href="https://github.com/flovelace/delve-into-the-dungeon" target="_blank" rel="noopener noreferrer"
+                        class="btn-two">view code.
+                    </a>
                 </div>
             </section>
         
