Updated resume and description for delve into the dungeon project.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p> -->
             <div id="button-container">
               <a
-                href="./assets/files/Ada-Hoeg-Resume.pdf"
+                href="./assets/files/ada-hoeg-resume.pdf"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="btn-one"
@@ -169,8 +169,8 @@
               <p class="p-copy">
                 This is a clean design page with a dark mode theme with a focus
                 on helping people find interesting music within the dungeon
-                synth genre. It was created as a personal challenge to use pure
-                HTML5 and CSS3 to create a responsive and accessible page.
+                synth genre. The project uses React and focuses on ease of
+                scaling
               </p>
             </div>
             <a
