--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </p> -->
             <div id="button-container">
               <a
-                href="./assets/files/ah-resume.pdf"
+                href="./assets/files/ada-h-resume.pdf"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="btn-one"
@@ -217,7 +217,7 @@
               <!-- linkedIn -->
               <li class="socials-list-item">
                 <a
-                  href="https://www.linkedin.com/in/adahoeg/"
+                  href="https://www.linkedin.com/in/devada/"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="btn-social"
